--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "date-fns": "^2.30.0",
     "flatpickr": "^4.6.13",
+    "progressbar.js": "^1.1.0",
     "toastify-js": "^1.12.0"
   }
 }
