--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "date-fns": "^2.30.0",
     "flatpickr": "^4.6.13",
     "toastify-js": "^1.12.0"
